[package]
name = "logging"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { workspace = true }
time = { version = "0.3.36", features = ["macros"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "time"] }
