[package]
name = "vertex-network-primitives-traits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
## nectar
nectar-primitives-traits.workspace = true

## alloy
alloy-primitives.workspace = true
alloy-signer.workspace = true

## libp2p
libp2p.workspace = true

thiserror.workspace = true

[lints]
workspace = true
