[package]
name = "vertex-node-api"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Node API traits for the Vertex Swarm node"

[dependencies]
# Internal crates
nectar-primitives = { workspace = true }
vertex-swarm-api = { workspace = true }
vertex-swarmspec = { workspace = true }

# Async
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Trait implementation
auto_impl = "1.1"

# Feature-gated dependencies
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = ["std", "serde"]
std = ["serde?/std"]
serde = ["dep:serde"]
