[package]
name = "vertex-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Unified observability (logging, tracing, metrics) for Vertex Swarm"

[lints]
workspace = true

[features]
# The native server stack: tracing subscriber, OTLP exporters, the Prometheus
# recorder, the metrics HTTP server, and profiling. On by default so a native
# node gets the full observability infrastructure. A wasm client turns this off
# (`default-features = false`) and keeps only the platform-neutral metric
# primitives (recording macros, guards, label utilities, and the histogram
# bucket presets re-exported from `vertex-metrics`). The server stack pulls
# `axum` -> `tokio[net]` -> `mio`, which does not build for `wasm32`.
default = ["server"]
server = [
    "dep:metrics-exporter-prometheus",
    "dep:metrics-process",
    "dep:metrics-util",
    "dep:tracing-subscriber",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry-appender-tracing",
    "dep:tokio",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:eyre",
    "dep:serde",
    "dep:vertex-tasks",
]
profiling = ["server", "pprof"]
jemalloc = ["server", "tikv-jemalloc-ctl"]
heap-profiling = ["jemalloc"]
tokio-console = ["server", "console-subscriber"]

[dependencies]
# Internal crates
vertex-metrics = { workspace = true }
vertex-tasks = { workspace = true, optional = true }
vertex-util-runtime = { workspace = true }

# Metrics
metrics = { workspace = true }
# We only serve metrics over the HTTP listener; Prometheus scrapes us and never
# pushes. Dropping the default push-gateway feature avoids hyper-rustls and its
# aws-lc-rs backend, which is C/assembly that breaks the wasm32 target and old
# ARM cross-toolchains. Push-based export, if ever needed, belongs on OTLP.
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener"], optional = true }
metrics-process = { version = "2.3", optional = true }
metrics-util = { version = "0.19", optional = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
# OpenTelemetry for distributed tracing
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"], optional = true }

# HTTP server for metrics
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["trace"], optional = true }

# Error handling
thiserror = { workspace = true }
eyre = { workspace = true, optional = true }

# Synchronization
parking_lot = { workspace = true }

# Misc
serde = { workspace = true, features = ["derive"], optional = true }

# Profiling (optional)
pprof = { workspace = true, optional = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }
console-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.5"
