[package]
name = "vertex-observability"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Unified observability (logging, tracing, metrics) for Vertex Swarm"

[lints]
workspace = true

[features]
# Orthogonal slices of the native observability stack plus a `host` umbrella that
# unions them. The plain config structs (`StdoutConfig`, `OtlpConfig`,
# `OtlpLogsConfig`, `MetricsServerConfig`, `LogFormat`) and the platform-neutral
# metric primitives (recording macros, guards, label utilities, histogram bucket
# presets re-exported from `vertex-metrics`) compile with NO features enabled, so
# a wasm client or a config-only consumer keeps the light surface. The heavy
# slices pull `axum` -> `tokio[net]` -> `mio`, which does not build for `wasm32`.
# Default to the light surface (library-first): the binary and node crates opt
# into the slice they need; embedders and the wasm cone get nothing heavy by
# default and never have to remember `default-features = false`.
default = []

# Tracing subscriber: console/stdout layer, the `LogFormat -> layer` conversion,
# `VertexTracer`, `TracingGuard`, and `build_and_init`. Gates `layers.rs`,
# `guard.rs`, and `tracer.rs`.
subscriber = ["dep:tracing-subscriber", "dep:eyre"]

# OTLP trace and log export layers on top of the subscriber. Pulls the
# OpenTelemetry SDK and exporters and registers the W3C `TraceContextPropagator`.
otlp = [
    "subscriber",
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
    "dep:opentelemetry-appender-tracing",
]

# Prometheus recorder, histogram registry, and the process/jemalloc hooks. Pulls
# `vertex-tasks` for the recorder upkeep task and `eyre` for the install path.
prometheus = [
    "dep:metrics-exporter-prometheus",
    "dep:metrics-util",
    "dep:metrics-process",
    "dep:vertex-tasks",
    "dep:eyre",
]

# Axum metrics HTTP server (the `/metrics`, `/health`, and profiling endpoints).
# Implies `prometheus` because it serves the recorder's handle. `serde` carries
# the server's query/response (de)serialization and the `MemoryStats` shape.
http-server = [
    "prometheus",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:serde",
]

# Umbrella that preserves the full native stack: subscriber, OTLP export, the
# Prometheus recorder, and the HTTP metrics server.
host = ["subscriber", "otlp", "prometheus", "http-server"]

profiling = ["host", "pprof"]
jemalloc = ["host", "dep:tikv-jemalloc-ctl"]
heap-profiling = ["jemalloc"]
tokio-console = ["subscriber", "dep:console-subscriber"]

[dependencies]
# Internal crates
vertex-metrics = { workspace = true }
vertex-tasks = { workspace = true, optional = true }
vertex-util-runtime = { workspace = true }

# Metrics
metrics = { workspace = true }
# We only serve metrics over the HTTP listener; Prometheus scrapes us and never
# pushes. Dropping the default push-gateway feature avoids hyper-rustls and its
# aws-lc-rs backend, which is C/assembly that breaks the wasm32 target and old
# ARM cross-toolchains. Push-based export, if ever needed, belongs on OTLP.
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener"], optional = true }
metrics-process = { version = "2.3", optional = true }
metrics-util = { version = "0.20", optional = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, optional = true }
# OpenTelemetry for distributed tracing
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }

# Async runtime
tokio = { workspace = true, features = ["sync", "macros", "rt-multi-thread"], optional = true }

# HTTP server for metrics
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["trace"], optional = true }

# Error handling
thiserror = { workspace = true }
eyre = { workspace = true, optional = true }

# Synchronization
parking_lot = { workspace = true }

# Misc
serde = { workspace = true, features = ["derive"], optional = true }

# Profiling (optional)
pprof = { workspace = true, optional = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }
console-subscriber = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.5"
