[package]
name = "p2p"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
alloy.workspace = true
anyhow.workspace = true
futures.workspace = true
libp2p.workspace = true
libp2p-stream.workspace = true
prost.workspace = true
prost-types.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
handshake = { path = "../protocols/handshake" }
swarm = { path = "../swarm" }

[build-dependencies]
prost-build = "0.12.6"
