[package]
name = "swarm-primitives-traits"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Common types in Swarm"

[lints]
workspace = true

[dependencies]
# alloy
alloy-primitives.workspace = true
