[package]
name = "nectar-primitives-traits"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Common types in Ethereum Swarm"

[lints]
workspace = true

[dependencies]
# alloy
alloy-primitives.workspace = true
alloy-signer.workspace = true

bytes.workspace = true
thiserror.workspace = true
