[package]
name = "swarm-primitives"
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# serde = { workspace = true, features = ["derive"] }
# serde_json.workspace = true
alloy.workspace = true
swarm-primitives-traits.workspace = true

# misc
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true

thread_local = "1.1.8"
rayon = "1.10.0"

# getrandom
# getrandom = { workspace = true, optional = true }

# rand
rand = { workspace = true, optional = true, features = ["getrandom"] }

# tokio
tokio = { workspace = true, features = ["sync"] }
futures.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
rand = { workspace = true, features = ["getrandom"] }
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
alloy.workspace = true

[[bench]]
name = "primitives"
path = "benches/primitives.rs"
harness = false
required-features = ["rand"]

[[bench]]
name = "proofs"
path = "benches/proofs.rs"
harness = false
