[package]
name = "nectar-primitives"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Common types in Ethereum Swarm"

[dependencies]
alloy.workspace = true
alloy-chains.workspace = true
nectar-primitives-traits.workspace = true

# misc
bytes.workspace = true
anyhow.workspace = true
thiserror.workspace = true
arbitrary = { workspace = true, features = ["derive"] }
rand = { workspace = true, optional = true }

thread_local = "1.1.8"
rayon = "1.10.0"

# tokio
tokio = { workspace = true, features = ["sync"] }
futures.workspace = true

# serde
serde.workspace = true

[dev-dependencies]
alloy = { workspace = true, features = ["getrandom"] }
arbitrary.workspace = true
proptest.workspace = true
proptest-arbitrary-interop.workspace = true
rand.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }
tokio = { workspace = true, features = ["full"] }

[build-dependencies]
alloy.workspace = true

[features]
arbitrary = [
    # "dep:arbitrary",
    "dep:rand"
]

[[bench]]
name = "primitives"
path = "benches/primitives.rs"
harness = false
required-features = ["rand"]

[[bench]]
name = "proofs"
path = "benches/proofs.rs"
harness = false
