[package]
name = "vertex-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
bytes.workspace = true
serde = { workspace = true, default-features = false }
thiserror.workspace = true

[lints]
workspace = true
