[package]
name = "vertex-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, default-features = false }
strum.workspace = true
thiserror.workspace = true

# Optional: codec impls for nectar types
nectar-primitives = { workspace = true, optional = true }

# Optional: codec impls for alloy types
alloy-primitives = { workspace = true, optional = true, features = ["serde"] }

[features]
default = []
nectar = ["dep:nectar-primitives"]
alloy = ["dep:alloy-primitives"]

[lints]
workspace = true
