[package]
name = "vertex-swarm-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
nectar-primitives = { workspace = true }
vertex-primitives = { workspace = true }
vertex-swarmspec = { workspace = true }
vertex-net-primitives-traits = { workspace = true }

# Alloy
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }

# External dependencies
auto_impl = "1.1"
futures = { workspace = true }
thiserror = { workspace = true }
async-trait = "0.1"

[features]
default = ["std"]
std = []
