[package]
name = "vertex-swarm-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Core implementation of Swarm node functionality"

[dependencies]
# Internal crates
vertex-primitives = { workspace = true }
vertex-swarm-api = { workspace = true }
vertex-swarmspec = { workspace = true }
vertex-storage = { workspace = true, optional = true }
vertex-network = { workspace = true, optional = true }
vertex-access = { workspace = true, optional = true }
vertex-protocol = { workspace = true, optional = true }

# Async
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# Logging and metrics
tracing = "0.1"

# Error handling
thiserror = "1.0"

# Misc
async-trait = "0.1"
auto_impl = "1.1"
bytes = "1.4"
dashmap = "5.4"
once_cell = "1.17"

[features]
default = ["full"]
full = ["storage", "network", "access", "protocol"]
storage = ["dep:vertex-storage"]
network = ["dep:vertex-network"]
access = ["dep:vertex-access"]
protocol = ["dep:vertex-protocol"]
