[package]
name = "vertex-tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Task management for Vertex"

[lints]
workspace = true

[dependencies]
# async
tokio = { workspace = true, features = ["sync", "rt"] }
futures-util = { workspace = true, features = ["std"] }

# metrics
metrics.workspace = true

# misc
auto_impl.workspace = true
tracing.workspace = true
thiserror.workspace = true
dyn-clone.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "time", "macros"] }
