[package]
name = "vertex-tasks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Task management for Vertex"

[lints]
workspace = true

[dependencies]
# async
futures-util = { workspace = true, features = ["std"] }

# internal crates
vertex-metrics = { workspace = true }
vertex-util-runtime = { workspace = true }

# metrics
metrics.workspace = true

# misc
auto_impl.workspace = true
parking_lot.workspace = true
tracing.workspace = true
thiserror.workspace = true
dyn-clone.workspace = true

# Native spawns onto the multi-thread tokio runtime via a runtime handle.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }

# Wasm spawns onto the browser event loop via wasm-bindgen-futures. Single-thread
# tokio only: no rt-multi-thread, no net, no signal.
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
wasm-bindgen-futures = { workspace = true }
# tokio's timer driver does not run on wasm32-unknown-unknown (it reaches the std
# unsupported-platform clock and panics), so wasm timers use the browser's
# setTimeout through gloo-timers instead. See the `time` module.
gloo-timers = { workspace = true, features = ["futures"] }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "time", "macros"] }
