[package]
name = "beers-tracing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "tracing helpers"

[lints]
workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json"]}
tracing-opentelemetry = "0.24"
tracing-appender.workspace = true
tracing-journald = "0.3"
tracing-logfmt = "0.3.4"
tracing-file = "0.1.0"
rolling-file = "0.2.0"
clap = { workspace = true, features = ["derive"] }
eyre.workspace = true
# Introduce optional dependencies for telemetry
opentelemetry = "0.23"
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["tokio"] }
tonic = { version = "0.11" }