[package]
name = "vertex-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# External dependencies
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
hex = { workspace = true }
alloy-primitives = { workspace = true }
auto_impl = "1.1"

[features]
default = ["std", "serde"]
std = ["alloy-primitives/std", "serde?/std"]
serde = ["dep:serde", "alloy-primitives/serde"]
