[package]
name = "vertex-chain-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Wasm-safe chain (Ethereum RPC) trait surface for Vertex node services"

[lints]
workspace = true

[dependencies]
# nectar
nectar-contracts = { workspace = true }

# vertex
vertex-swarm-bandwidth-chequebook = { workspace = true }

# alloy
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }

# async
async-trait = { workspace = true }
auto_impl = { workspace = true }

# misc
bytes = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
