[package]
name = "vertex-chain-index-staking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Staking registry chain indexer: folds StakeRegistry events into a vertex-storage projection"

[lints]
workspace = true

[dependencies]
# engine: the generic, reorg-safe event-indexing driver and the `Indexer` trait
# this crate implements.
vertex-chain-index = { workspace = true }
# storage: the projection table and the staked-overlay set live behind the
# `Database`/`DbTx` traits. The `alloy` feature pulls in the `Address` key codec
# the per-owner stake table is keyed by.
vertex-storage = { workspace = true, features = ["alloy"] }

# nectar: reuse the shared `IStakeRegistry` `sol!` event bindings rather than
# re-deriving them from the ABI. `OverlayChanged` is the one event this
# deployment adds beyond the shared interface, declared locally below.
nectar-contracts = { workspace = true }

# alloy: event decoding (`SolEvent`), the log `Filter`, and the primitive types
# the projection stores. `default-features = false` keeps the wasm-hostile
# transport out; this crate decodes logs the engine fetched, it opens no socket.
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-rpc-types-eth = { workspace = true }
alloy-sol-types = { workspace = true }

# serialization: the projection rows derive serde for the storage codec.
serde = { workspace = true, features = ["derive"] }

tracing = { workspace = true }

[dev-dependencies]
vertex-storage-redb = { workspace = true }
# A full provider with an HTTP transport for the ignored anvil-fork e2e test.
alloy-provider = { workspace = true, features = ["reqwest"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "time"] }
